--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </ul>
 
     <hr>
-    
+
     <h3>Teaching Experiences</h3>
     <h4>Teaching Assistant</h4>
       <ul>
@@ -75,6 +75,7 @@
       </ul>
     <h4>Tutor</h4>
       <ul>
+        <li>(L0444.000400) Basic Computing: First Adventures in Computing, SNU, Fall 2020</li>
         <li>(033.015) Engineering Mathematics 2, SNU, Fall 2019</li>
       </ul>
 
@@ -85,6 +86,6 @@
 
     <hr>
 
-    Last updated: August 27, 2020
+    Last updated: September 1, 2020
   </body>
 </html>
