--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
     <h3>Teaching Experiences</h3>
     <h4>Teaching Assistant</h4>
       <ul>
+        <li>Python for Data Analytics, SNU-LGE Advanced Data Scientists, Jan 2021</li>
+        <li>Introduction to Python, Samsung DS², Dec 2020</li>
         <li>(4190.308) Computer Architecture, SNU, Fall 2020</li>
-        <li> Introduction to Python, Samsung DS², Jun 2020 - Jul 2020</li>
+        <li>Introduction to Python, Samsung DS², Jun 2020 - Jul 2020</li>
         <li>(4190.103A) Programming Practice, SNU, Fall 2019</li>
       </ul>
     <h4>Tutor</h4>
@@ -86,6 +88,6 @@
 
     <hr>
 
-    Last updated: September 1, 2020
+    Last updated: February 3, 2021
   </body>
 </html>
