--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Injae Kang</title>
   </head>
   <body>
+    <img src="https://github.com/abcinje/abcinje.github.io/blob/master/photo.jpg?raw=true">
     <h2>Injae Kang (강인재)</h2>
     M.S. Student<br>
     Systems Software & Architecture Laboratory<br>
